--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,22 @@
-{{ content }}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    {%- include header.html -%}
+
+    <main aria-label="Content">
+      <div>
+        {{ content }}
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+</body>
+</html>
+
+
