--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,4 +15,12 @@ html {
   font-size: 62.5%; // 1 rem = 10px; 10px/16px = 62.5%
 }
 
+body {
+  box-sizing: border-box;
+  font-family: 'Cutive Mono', monospace;
+}
+
+a {
+  text-decoration: none;
+}
 
