--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,8 +2,8 @@
 ---
 
 @import
+        "variables",
         "base",
         "layout",
-        "syntax-highlighting",
-        "variables"
+        "syntax-highlighting"  
 ;
