--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+
+<div class="hero">
+    <h1 class="hero__headline">{{ site.description }}</h1>
+</div>
 <div>
     {%- if site.posts.size > 0 -%}
         <h2>{{page.list_title | default: "Posts"}}</h2>
