--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,22 +6,22 @@ layout: default
 <div class="hero">
     <h1 class="hero__headline">{{ site.description }}</h1>
 </div>
-<div>
+<div class="posts">
     {%- if site.posts.size > 0 -%}
-        <h2>{{page.list_title | default: "Posts"}}</h2>
-        <ul>
+        <h2 class="posts__headline">{{page.list_title | default: "Posts"}}</h2>
+        <ul class="posts__list">
             {%- for post in site.posts -%}
-            <li>
-                {%- assign date_format = site.bright.date_format | default: "%b %-d, %Y" -%}
-                <span>{{ post.date | date: date_format}}</span>
-                <h3>
-                    <a href="{{ post.url | relative_url }}">
-                        {{ post.title | escape }}
-                    </a>
-                </h3>
-                {%- if site.show_excerpts -%}
-                    {{ post.excerpt }}
-                {%- endif -%}
+            <li class="posts__item">
+                
+                    {%- assign date_format = site.bright.date_format | default: "%b %-d, %Y" -%}
+                    <span class="posts__date">{{ post.date | date: date_format}}</span>
+                    <h3 class="posts__title">
+                        <a class="posts__link" href="{{ post.url | relative_url }}">
+                            {{ post.title | escape }}
+                        </a>
+                    </h3>
+                    {{ post.content | strip_html | truncate:60 }}
+               
             </li>
             {%- endfor -%}
         </ul>
