added data file & projects on home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,3 +7,4 @@ layout: default
     <h1 class="hero__headline">{{ site.description }}</h1>
 </div>
 {%- include posts.html -%}
+{%- include projects.html -%}
