--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,7 +2,15 @@
 $default-font-size: 1.6rem;
 
 // COLORS
-$white: #eee;
+
 $primary-color-light: #0f97ff;
 $primary-color: #097cd3;
 $primary-color-dark: #085ea0;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+$color-grey-dark: #666;
+$color-grey-dark-2:#999;
+$color-grey-dark-3:#333;
+$color-white: #fff;
+$color-black: #000;
