--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -73,63 +73,34 @@ a {
 }
 
 .posts {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
+
   
 
   &__headline {
-    font-size: 3.5rem;
-    color: $primary-color-dark;
+    
   }
 
   &__list {
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    padding: 0;
-    margin-right: 4rem;
-    margin-left: 4rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr;
   }
 
   &__item {
-    width: 80%;
-    box-shadow: 0 0 1rem $color-grey-dark-2;
-    border-radius: 5px;
-    overflow: hidden;
-    max-width: 35rem;
     
-    &:not(:last-child) {
-      margin-right: 4rem;
-    }
 
     
   }
 
   &__date {
-    display: inline-block;
-    margin-top: 1rem;
-    margin-left: 2rem;
+    
   }
 
   &__title-box {
-    background-color: $primary-color;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     
   }
 
   &__title {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    text-align: center;
-    font-size: 2.4rem;
-    font-weight: 300;
-    color: $color-white;
-    margin-top: 0;
-    margin-bottom: 0;
     
   }
 
@@ -138,8 +109,6 @@ a {
   }
 
   &__content {
-    display: block;
-    margin: 1rem 2rem;
-    font-size: 1.7rem;
+    
   }
 }
