layout projects section

--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,18 +1,17 @@
 <div class="posts">
   {%- if site.posts.size > 0 -%}
-      <h2 class="posts__headline">{{page.list_title | default: "Posts"}}</h2>
+      <h2 class="posts__headline">{{page.list_title | default: "Blog Posts"}}</h2>
       <ul class="posts__list">
           {%- for post in paginator.posts -%}
           <li class="posts__item">
               
                   {%- assign date_format = site.bright.date_format | default: "%b %-d, %Y" -%}
-                  <div class="posts__title-box">
-                      <h3 class="posts__title">
-                          <a class="posts__link" href="{{ post.url | relative_url }}">
-                              {{ post.title | escape }}
-                          </a>
-                      </h3>
-                  </div>
+                  
+                    <h3 class="posts__title">
+                        <a class="posts__link" href="{{ post.url | relative_url }}">
+                            {{ post.title | escape }}
+                        </a>
+                    </h3>
                   
                   <span class="posts__date">{{ post.date | date: date_format}}</span>
                   <p class="posts__content">
